

export class AlignmentObject extends Intangible {
  alignmentType: string;
  educationalFramework: string;
  targetDescription: string;
  targetName: string;
  targetUrl: string;


}
