import { CategoryCodeSet,string } from "./CategoryCodeSet,string";


export class CategoryCode extends DefinedTerm {
  codeValue: string;
  inCodeSet: CategoryCodeSet,string;


}
