

export class MonetaryAmountDistribution extends QuantitativeValueDistribution {
  currency: string;


}
