import { Person } from "./Person";
import { EducationalOccupationalCredential } from "./EducationalOccupationalCredential";
import { string,string,Thing } from "./string,string,Thing";
import { Event } from "./Event";
import { MonetaryAmount,PriceSpecification } from "./MonetaryAmount,PriceSpecification";
import { Place,ContactPoint } from "./Place,ContactPoint";
import { Place } from "./Place";
import { Grant } from "./Grant";
import { Distance,QuantitativeValue } from "./Distance,QuantitativeValue";
import { ContactPoint } from "./ContactPoint";
import { Occupation } from "./Occupation";
import { GenderType,string } from "./GenderType,string";
import { string,DefinedTerm } from "./string,DefinedTerm";
import { date } from "./date";
import { Organization,Person } from "./Organization,Person";
import { Offer } from "./Offer";
import { Organization } from "./Organization";
import { InteractionCounter } from "./InteractionCounter";
import { string,PostalAddress } from "./string,PostalAddress";
import { ProgramMembership,Organization } from "./ProgramMembership,Organization";
import { string,CreativeWork } from "./string,CreativeWork";
import { Organization,Brand } from "./Organization,Brand";
import { EducationalOrganization,Organization } from "./EducationalOrganization,Organization";
import { QuantitativeValue } from "./QuantitativeValue";
import { Language,string } from "./Language,string";
import { Person,string } from "./Person,string";
import { Demand } from "./Demand";
import { Product,OwnershipInfo } from "./Product,OwnershipInfo";
import { OfferCatalog } from "./OfferCatalog";
import { Country } from "./Country";


export class Person extends Thing {
  spouse: Person;
  additionalName: string;
  hasCredential: EducationalOccupationalCredential;
  telephone: string;
  honorificPrefix: string;
  parents: Person;
  familyName: string;
  givenName: string;
  knowsAbout: string,string,Thing;
  performerIn: Event;
  netWorth: MonetaryAmount,PriceSpecification;
  award: string;
  workLocation: Place,ContactPoint;
  honorificSuffix: string;
  deathPlace: Place;
  homeLocation: Place,ContactPoint;
  funding: Grant;
  vatID: string;
  height: Distance,QuantitativeValue;
  globalLocationNumber: string;
  contactPoints: ContactPoint;
  hasOccupation: Occupation;
  gender: GenderType,string;
  parent: Person;
  awards: string;
  sibling: Person;
  jobTitle: string,DefinedTerm;
  birthDate: date;
  funder: Organization,Person;
  makesOffer: Offer;
  children: Person;
  worksFor: Organization;
  knows: Person;
  interactionStatistic: InteractionCounter;
  address: string,PostalAddress;
  memberOf: ProgramMembership,Organization;
  publishingPrinciples: string,CreativeWork;
  colleagues: Person;
  deathDate: date;
  email: string;
  affiliation: Organization;
  siblings: Person;
  birthPlace: Place;
  brand: Organization,Brand;
  sponsor: Organization,Person;
  naics: string;
  contactPoint: ContactPoint;
  callSign: string;
  isicV4: string;
  hasPOS: Place;
  alumniOf: EducationalOrganization,Organization;
  duns: string;
  weight: QuantitativeValue;
  knowsLanguage: Language,string;
  relatedTo: Person;
  colleague: Person,string;
  seeks: Demand;
  taxID: string;
  owns: Product,OwnershipInfo;
  hasOfferCatalog: OfferCatalog;
  follows: Person;
  nationality: Country;
  faxNumber: string;


}
