classDiagram
  EducationalOccupationalProgram -- AlignmentObject
  EducationalOccupationalProgram -- Course
  EducationalOccupationalProgram -- EducationalOccupationalCredential
  EducationalOccupationalProgram -- dateTime
  EducationalOccupationalProgram -- date
  EducationalOccupationalProgram -- MonetaryAmountDistribution
  EducationalOccupationalProgram -- DayOfWeek
  EducationalOccupationalProgram -- Offer
  EducationalOccupationalProgram -- Demand
  EducationalOccupationalProgram -- StructuredValue
  EducationalOccupationalProgram -- Organization
  EducationalOccupationalProgram -- Person
  EducationalOccupationalProgram -- Duration
  EducationalOccupationalProgram -- DefinedTerm
  EducationalOccupationalProgram -- CategoryCode


class EducationalOccupationalProgram {

  AlignmentObject programPrerequisites
  Course programPrerequisites
  EducationalOccupationalCredential programPrerequisites
  string programPrerequisites
  Course hasCourse
  dateTime startDate
  date startDate
  MonetaryAmountDistribution salaryUponCompletion
  number termsPerYear
  DayOfWeek dayOfWeek
  Offer offers
  Demand offers
  number typicalCreditsPerTerm
  StructuredValue typicalCreditsPerTerm
  date applicationStartDate
  string timeOfDay
  date endDate
  dateTime endDate
  Organization provider
  Person provider
  MonetaryAmountDistribution trainingSalary
  string educationalCredentialAwarded
  EducationalOccupationalCredential educationalCredentialAwarded
  string educationalCredentialAwarded
  number numberOfCredits
  StructuredValue numberOfCredits
  Duration timeToComplete
  EducationalOccupationalCredential occupationalCredentialAwarded
  string occupationalCredentialAwarded
  string occupationalCredentialAwarded
  Duration termDuration
  string educationalProgramMode
  string educationalProgramMode
  string programType
  DefinedTerm programType
  number maximumEnrollment
  string financialAidEligible
  DefinedTerm financialAidEligible
  date applicationDeadline
  CategoryCode occupationalCategory
  string occupationalCategory

 }
